modified form styling and added herotext

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="index.css" rel="stylesheet">
-    <title>Form</title>
+    <title>New Tab</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <header>
             <div class="left">
                 <img src="./assets/image.jpg">
-                <div>
+                <div class="loan">
                 Finloans 
                 </div>
             </div>
@@ -35,29 +35,20 @@
             </div>
         </header>
         <section> 
-        <div class="app-layout">
-            <div>User Registration Form</div>
-            <div>please Fill this form to create an account</div>
+        <div class="text">Get Loan for Your Business growth  or startup</div>    
+        <div class="form-layout">
+            <div class="firstheading">How Much Do You Want?</div>
+            <div class="secondheading">We provide online instant cash loans with quick</div>       
             <form action="form.php">
                 <div class="form-input">
-                    <label for="">Username</label> 
-                    <input type="text" placeholder="Enter Your Username" name="username" id="username"></input>
-                </div>
-                <div class="form-input">
-
-                    <label for="Email">Email</label> 
+                    <select>
+                        <option value="Rahul">Rahul</option>
+                        <option value="Naveen">Naveen</option>
+                        <option value="Pintu">Pintu</option>
+                    </select>    
                     <input type="text" placeholder="Enter Your Email" name="Email" id="Email"></input>      
                 </div>
-                <div class="form-input">
-
-                    <label for="Password">Password</label>   
-                    <input type="password" placeholder="Enter Your Password" name="Password" id="Password"></input>
-                </div>
-                <div class="form-input">
-                    <label for="Re-enter Password">Re-enter Password</label> 
-                    <input type="password" placeholder="Re-enter Your Password" name="" id="Re-enter Password"></input>
-                </div>            
-                <hr>    
+   
                 <div class="bottom-section">
                     <div class="margin">By creating an account to our</div>
                     <div class="margin"><a href="#">Tearms and condition</a></div>
